Fixed overflow issues on small screens

--- a/static/css/partials/_article.scss
+++ b/static/css/partials/_article.scss
@@ -1,4 +1,7 @@
 #post-header {
+  margin-left: 0;
+  margin-right: 0;
+  
   width: 100%;
 
   text-align: center;
