--- a/static/css/partials/_base.scss
+++ b/static/css/partials/_base.scss
@@ -18,7 +18,10 @@ body {
   max-width: 960px;
 
   > * {
-    padding: 10px 20px;
+    margin-right: auto;
+    margin-left: auto;
+
+    width: 92%;
   }
 }
 
